Modifying NakimaCV file

--- a/NakimaCv.html
+++ b/NakimaCv.html
@@ -4,7 +4,11 @@
 		<META http-equiv="content-type" content="text/html; charset=utf-8">
 		<title> Nakima CV</title>
 	</head>
+  
 	<body>
+
+
+
 		<h1> Personal Details </h1>
 		<div id="PersonlDetails">
 			<p> Nakima St. Lewis</P>
@@ -32,6 +36,7 @@
 			<h2>Sales Assistant (Cancer Research) - June to August 2010</h2>
 			<p>This role involved pricing and tagging clothes, putting out new stock as well as removing it from the shop floor, and helping customers with any queries. </p>
 		</div>
+    </br>
 
 		<h1>Skills Profile<h1>
 		<div>
@@ -43,7 +48,43 @@
 		</div>
 
     <h1> Soft Skills</h1>
+    <div>
+        <p>Team work: I have learned since the care home to work efficiently in a team and have evolved this skill in my current role. My team work together to fix issues that affect the whole system or when one of us is stuck on a problem.</p>
+        <p>Communication:  My communication skills have since been developed from the care home while I have been working at GRB. I have to liaise with many different teams within the company while solving support issues as well as provide support for external users of the company. I also have to contact companies related to IT sales or other companies support teams. </p>
+        <p>Organisation: Working at the care home and GRB has taught me to be very organised with the way I handle my tasks. There are many issues that come in needed to be fixed so I have to stay on top of which are being worked on and which have urgent priority, all the while keeping on top of my usual daily monitoring.</p>
+        <p>Time management: Juggling many tasks has made me become more efficient at managing my time. Some issues require a lot of work, so I have to make decisions as to when to halt them to complete the more urgent work on the list to adhere to the deadlines.</p>
+        <p>Customer Service: One of my main tasks while working not only at the care home but also at GRB is to provide the best customer service I can. This means being professionally polite and approachable as well as being able to explaining tasks and features to the staff who are not tech savvy or have no knowledge of the product to hand.</p>
+        <p>Independence: Throughout my experience at GRB I have been given a lot of responsibility, which means that I have to be very self-reliant in what I do. I am able to complete given tasks with little assistance.</p>
+    </div>
 
+    <h1>Accreditations</h1>
+    <div>
+        <p>ISTQB: Software Testing Foundation - Passed </p.>
+        <p>MCSA: Windows Server 2012 - Passed exams 410 and 411.</p>
+        <p>MCSA: Querying Microsoft SQL Server 2012 - Currently learning.</P>
+    </div>
+
+    <h1>Education</h1>
+    <div>
+      <p>Sept 2009 to July 2012 - City University London</p>
+      <p>BSc (Hons) Computer Science with Artificial Intelligence (Grade 2:1)</p>
+      </br>
+      <p>Sept 2007 to June 2009 - Merton College</p>
+      <p>BTEC National Diploma for IT Practitioners (Networking): (Distinction, Distinction, Merit)</p>
+      <p>* Grades available on request</p>
+      </br>
+      <p>Sept 2000 to June 2005 - Burntwood School</p>
+      <p>GCSE grads A to C.</p>
+    </div>
+
+    <h1>Intrests</h1>
+    <div>
+      <p>I delight in completing puzzles some of my favourite are Sudoku, Hanji, Kakuro, I find it helps to develop my problem solving and the way I analyse situations.</p>
+      <p>I also enjoy learning other languages, I am currently teaching myself to read/speak/write Japanese. I am looking to learn Kweyol and French after I have finished.</P>
+      <p>I am also a member of my local gym as I want to increase my fitness, stamina, as well as my overall health.</p>
+      <p>In my spare time, I also cross stich pictures. I am currently working on a ¼ stich of a picture of roses in a vase and a mix of stitching methods to complete a picture consisting of a lions, tigers, and leopard faces.</p>
+      <p>I am also an adventurist at heart and like to try different things. I have recently gone on a paintballing trip with family and other social events with groups of new people such as bachata dance classes, anime expos and mini food festivals.</p>
+    </div>
 
 	</body>
 </html>
