Updating the cv file 1-4-2016

--- a/NakimaCv.html
+++ b/NakimaCv.html
@@ -1,136 +1,180 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<META http-equiv="content-type" content="text/html; charset=utf-8">
-		<title> Nakima CV</title>
-	</head>
-
-	<body>
-		<!-- This is a nav bar allowing the user to navigate around the site. -->
-		<nav id="MainNavBar">
-		 <!-- -->
-		 <ul>
-		 		<li><a href="#"></a></li>
-		 </ul>
-		</nav>
-
-		<!-- This aside will hold the side bar ?? -->
-		<aside class="" id="Sidebar">
-				
-		</aside>
-		<div>
-			<header>
-				<!-- can have many headers in many sections -->
-				<h1> Personal Details </h1>
-				<div id="PersonlDetails">
-					<p> Nakima St. Lewis</P>
-					<p> Dalton Ave, Surrey | CR4 3DT</p>
-					<p> st.lewis.n@gmail.com | 07534430673</p>
-				</div
-			</header>
-		</div>
-
-		<div>
-			<main>
-						<h1> Employment </h1>
-						<div id="EmploymentDetails">
-							<h2>IT Administrator (Graduate Recruitment Bureau) - Dec 2012 to Present:</h2>
-							<p>I am the first point of contact when users are experiencing issues and provide them with all lines of support. I solve issues ranging from replacing faulty hardware equipment such as motherboards and hard disks, to fixing software issues such as corrupted operating systems, browser issues, and driver issues.</p>
-							<p>Managing the network and servers to make sure they are running smoothly without faults and client machines are all monitored and protected correctly using Kaspersky’s administration security centre.</p>
-							<p>Upgrading the operating systems on servers and virtual machines from Windows Server 2003 to Windows Server 2012, to get the latest array of tools and features to manage the servers better.  I have migrate virtual machines from the vSphere platform onto Hyper-V servers, as we are able to host an unlimited amount of VMs. </p>
-							<p>Put in place DHCP failovers that saves a 5% pool of IP addresses to be used by another domain controller if the main one fails. I have also setup the Distributed File System Replication feature on a domain controller so that all files on a network can be replicated between the two controllers to create a form of redundancy enabling users access to all their files and folders if one goes down.</p>
-							<p>Built a web application and kiosk on an embedded device from scratch to computerize the way the company records their KPIS. C# was used to code the back end and HTML, JQuery and CSS to code the front. A database was also created in Microsoft’s SQL server management studio to store all the data and communicate with other databases that contain relevant information. Within the database stored procedures, functions, views and SQL Report Builder was used to help save and manage the data and present it in a user readable way.</p>
-							</br>
-
-							<h2>Care Assistant (Abbeyfield) - Aug 2011 to Feb 2013</h2>
-							<p>Helped to provide three meals a day and at break times as well as assist the residents with mobilising and exercising.</p>
-							<p>Assist with personal and oral care as well as moral and emotional support when needed. Also helped to provided clean personal and bedding laundry to the residents. </p>
-							<p>The gap in work was due to the assignment load at university. I was also working as a bank staff while working at GRB until February.</p>
-							</br>
-
-							<h2>Sales Assistant (Cancer Research) - June to August 2010</h2>
-							<p>This role involved pricing and tagging clothes, putting out new stock as well as removing it from the shop floor, and helping customers with any queries. </p>
-						</div>
-				    </br>
-
-						<h1>Skills Profile<h1>
-						<div>
-							<p>Software: C#, JavaScript, JQuery, HTML, CSS</p>
-							<p>Database: SQL, SQL Report Builder, SQL Management Studio</p>
-							<p>Operating Systems: Windows Server 2012, Windows 8, Windows 7</p>
-							<p>Packages: Microsoft Office suite</p>
-							<p>Testing: Regression Testing, Retesting, Statement Testing, Acceptance Testing</p>
-						</div>
-
-				    <h1> Soft Skills</h1>
-				    <div>
-				        <p>Team work: I have learned since the care home to work efficiently in a team and have evolved this skill in my current role. My team work together to fix issues that affect the whole system or when one of us is stuck on a problem.</p>
-				        <p>Communication:  My communication skills have since been developed from the care home while I have been working at GRB. I have to liaise with many different teams within the company while solving support issues as well as provide support for external users of the company. I also have to contact companies related to IT sales or other companies support teams. </p>
-				        <p>Organisation: Working at the care home and GRB has taught me to be very organised with the way I handle my tasks. There are many issues that come in needed to be fixed so I have to stay on top of which are being worked on and which have urgent priority, all the while keeping on top of my usual daily monitoring.</p>
-				        <p>Time management: Juggling many tasks has made me become more efficient at managing my time. Some issues require a lot of work, so I have to make decisions as to when to halt them to complete the more urgent work on the list to adhere to the deadlines.</p>
-				        <p>Customer Service: One of my main tasks while working not only at the care home but also at GRB is to provide the best customer service I can. This means being professionally polite and approachable as well as being able to explaining tasks and features to the staff who are not tech savvy or have no knowledge of the product to hand.</p>
-				        <p>Independence: Throughout my experience at GRB I have been given a lot of responsibility, which means that I have to be very self-reliant in what I do. I am able to complete given tasks with little assistance.</p>
-				    </div>
-
-				    <h1>Accreditations</h1>
-				    <div>
-				        <p>ISTQB: Software Testing Foundation - Passed </p.>
-				        <p>MCSA: Windows Server 2012 - Passed exams 410 and 411.</p>
-				        <p>MCSA: Querying Microsoft SQL Server 2012 - Currently learning.</P>
-				    </div>
-
-				    <h1>Education</h1>
-				    <div>
-				      <p>Sept 2009 to July 2012 - City University London</p>
-				      <p>BSc (Hons) Computer Science with Artificial Intelligence (Grade 2:1)</p>
-				      </br>
-				      <p>Sept 2007 to June 2009 - Merton College</p>
-				      <p>BTEC National Diploma for IT Practitioners (Networking): (Distinction, Distinction, Merit)</p>
-				      <p>* Grades available on request</p>
-				      </br>
-				      <p>Sept 2000 to June 2005 - Burntwood School</p>
-				      <p>GCSE grads A to C.</p>
-				    </div>
-
-				    <h1>Intrests</h1>
-				    <div>
-				      <p>I delight in completing puzzles some of my favourite are Sudoku, Hanji, Kakuro, I find it helps to develop my problem solving and the way I analyse situations.</p>
-				      <p>I also enjoy learning other languages, I am currently teaching myself to read/speak/write Japanese. I am looking to learn Kweyol and French after I have finished.</P>
-				      <p>I am also a member of my local gym as I want to increase my fitness, stamina, as well as my overall health.</p>
-				      <p>In my spare time, I also cross stich pictures. I am currently working on a ¼ stich of a picture of roses in a vase and a mix of stitching methods to complete a picture consisting of a lions, tigers, and leopard faces.</p>
-				      <p>I am also an adventurist at heart and like to try different things. I have recently gone on a paintballing trip with family and other social events with groups of new people such as bachata dance classes, anime expos and mini food festivals.</p>
-				    </div>
-
-						<form method="POST" name="Contact" action="http://lacedeamon.spartaglobal.com/contactform">
-							<div id="ContactForm">
-								<h1>Contact Form</h1>
-								<p>
-										Please type in your details to leave a comment and I will get back to you as soon as possible.
-								</p>
-								<p>
-										<label for="name">Name: </label><input id="name" type="text" name="name" value="">
-								</p>
-								<p>
-									<label for="email">Email: </label><input id="email" type="email" name="email" value="">
-								</p>
-								<p>
-									<input type="hidden" name="addressee" value="Nakima"></input>
-								</p>
-								<p>
-									<label for="">Message: </label><textarea name="message" id="message" rows="8" cols="40"></textarea>
-								</p>
-								<p>
-									<input type="submit" value="Submit Message">
-								</p>
-							</div>
-						</form>
-			</main>
-		</div>
-
-		<div>
-			<footer>
-
-			</footer>
-		</div>
-	</body>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<title>Nakima CV</title>
+</head>
+<body>
+<!-- This is a nav bar allowing the user to navigate around the site. -->
+<nav id="MainNavBar"><!-- -->
+<ul>
+<li><a href="#"></a></li>
+</ul>
+</nav>
+<!-- This aside will hold the side bar ?? -->
+<aside class="" id="Sidebar"></aside>
+<div>
+<header><!-- can have many headers in many sections -->
+<h1>Personal Details</h1>
+<div id="PersonlDetails">
+<p>Nakima St. Lewis</p>
+<p>Dalton Ave, Surrey | CR4 3DT</p>
+<p>st.lewis.n@gmail.com | 07534430673</p>
+</div>
+</header>
+</div>
+<div>
+<main>
+<h1>Employment</h1>
+<div id="EmploymentDetails">
+<h2>IT Administrator (Graduate Recruitment Bureau) - Dec 2012 to
+Present:</h2>
+<p>I am the first point of contact when users are experiencing
+issues and provide them with all lines of support. I solve issues
+ranging from replacing faulty hardware equipment such as
+motherboards and hard disks, to fixing software issues such as
+corrupted operating systems, browser issues, and driver issues.</p>
+<p>Managing the network and servers to make sure they are running
+smoothly without faults and client machines are all monitored and
+protected correctly using Kaspersky’s administration security
+centre.</p>
+<p>Upgrading the operating systems on servers and virtual machines
+from Windows Server 2003 to Windows Server 2012, to get the latest
+array of tools and features to manage the servers better. I have
+migrate virtual machines from the vSphere platform onto Hyper-V
+servers, as we are able to host an unlimited amount of VMs.</p>
+<p>Put in place DHCP failovers that saves a 5% pool of IP addresses
+to be used by another domain controller if the main one fails. I
+have also setup the Distributed File System Replication feature on
+a domain controller so that all files on a network can be
+replicated between the two controllers to create a form of
+redundancy enabling users access to all their files and folders if
+one goes down.</p>
+<p>Built a web application and kiosk on an embedded device from
+scratch to computerize the way the company records their KPIS. C#
+was used to code the back end and HTML, JQuery and CSS to code the
+front. A database was also created in Microsoft’s SQL server
+management studio to store all the data and communicate with other
+databases that contain relevant information. Within the database
+stored procedures, functions, views and SQL Report Builder was used
+to help save and manage the data and present it in a user readable
+way.</p>
+<br>
+<h2>Care Assistant (Abbeyfield) - Aug 2011 to Feb 2013</h2>
+<p>Helped to provide three meals a day and at break times as well
+as assist the residents with mobilising and exercising.</p>
+<p>Assist with personal and oral care as well as moral and
+emotional support when needed. Also helped to provided clean
+personal and bedding laundry to the residents.</p>
+<p>The gap in work was due to the assignment load at university. I
+was also working as a bank staff while working at GRB until
+February.</p>
+<br>
+<h2>Sales Assistant (Cancer Research) - June to August 2010</h2>
+<p>This role involved pricing and tagging clothes, putting out new
+stock as well as removing it from the shop floor, and helping
+customers with any queries.</p>
+</div>
+<br>
+<h1>Skills Profile</h1>
+<div>
+<p>Software: C#, JavaScript, JQuery, HTML, CSS</p>
+<p>Database: SQL, SQL Report Builder, SQL Management Studio</p>
+<p>Operating Systems: Windows Server 2012, Windows 8, Windows 7</p>
+<p>Packages: Microsoft Office suite</p>
+<p>Testing: Regression Testing, Retesting, Statement Testing,
+Acceptance Testing</p>
+</div>
+<h1>Soft Skills</h1>
+<div>
+<p>Team work: I have learned since the care home to work
+efficiently in a team and have evolved this skill in my current
+role. My team work together to fix issues that affect the whole
+system or when one of us is stuck on a problem.</p>
+<p>Communication: My communication skills have since been developed
+from the care home while I have been working at GRB. I have to
+liaise with many different teams within the company while solving
+support issues as well as provide support for external users of the
+company. I also have to contact companies related to IT sales or
+other companies support teams.</p>
+<p>Organisation: Working at the care home and GRB has taught me to
+be very organised with the way I handle my tasks. There are many
+issues that come in needed to be fixed so I have to stay on top of
+which are being worked on and which have urgent priority, all the
+while keeping on top of my usual daily monitoring.</p>
+<p>Time management: Juggling many tasks has made me become more
+efficient at managing my time. Some issues require a lot of work,
+so I have to make decisions as to when to halt them to complete the
+more urgent work on the list to adhere to the deadlines.</p>
+<p>Customer Service: One of my main tasks while working not only at
+the care home but also at GRB is to provide the best customer
+service I can. This means being professionally polite and
+approachable as well as being able to explaining tasks and features
+to the staff who are not tech savvy or have no knowledge of the
+product to hand.</p>
+<p>Independence: Throughout my experience at GRB I have been given
+a lot of responsibility, which means that I have to be very
+self-reliant in what I do. I am able to complete given tasks with
+little assistance.</p>
+</div>
+<h1>Accreditations</h1>
+<div>
+<p>ISTQB: Software Testing Foundation - Passed</p>
+<p>MCSA: Windows Server 2012 - Passed exams 410 and 411.</p>
+<p>MCSA: Querying Microsoft SQL Server 2012 - Currently
+learning.</p>
+</div>
+<h1>Education</h1>
+<div>
+<p>Sept 2009 to July 2012 - City University London</p>
+<p>BSc (Hons) Computer Science with Artificial Intelligence (Grade
+2:1)</p>
+<br>
+<p>Sept 2007 to June 2009 - Merton College</p>
+<p>BTEC National Diploma for IT Practitioners (Networking):
+(Distinction, Distinction, Merit)</p>
+<p>* Grades available on request</p>
+<br>
+<p>Sept 2000 to June 2005 - Burntwood School</p>
+<p>GCSE grads A to C.</p>
+</div>
+<h1>Intrests</h1>
+<div>
+<p>I delight in completing puzzles some of my favourite are Sudoku,
+Hanji, Kakuro, I find it helps to develop my problem solving and
+the way I analyse situations.</p>
+<p>I also enjoy learning other languages, I am currently teaching
+myself to read/speak/write Japanese. I am looking to learn Kweyol
+and French after I have finished.</p>
+<p>I am also a member of my local gym as I want to increase my
+fitness, stamina, as well as my overall health.</p>
+<p>In my spare time, I also cross stich pictures. I am currently
+working on a ¼ stich of a picture of roses in a vase and a mix of
+stitching methods to complete a picture consisting of a lions,
+tigers, and leopard faces.</p>
+<p>I am also an adventurist at heart and like to try different
+things. I have recently gone on a paintballing trip with family and
+other social events with groups of new people such as bachata dance
+classes, anime expos and mini food festivals.</p>
+</div>
+<form method="post" name="Contact" action=
+"http://lacedeamon.spartaglobal.com/contactform" id="Contact">
+<div id="ContactForm">
+<h1>Contact Form</h1>
+<p>Please type in your details to leave a comment and I will get
+back to you as soon as possible.</p>
+<p><label for="name">Name:</label> <input id="name" type="text"
+name="name" value=""></p>
+<p><label for="email">Email:</label> <input id="email" type="email"
+name="email" value=""></p>
+<p><input type="hidden" name="addressee" value="Nakima"></p>
+<p><label for="">Message:</label>
+<textarea name="message" id="message" rows="8" cols=
+"40"></textarea></p>
+<p><input type="submit" value="Submit Message"></p>
+</div>
+</form>
+</main>
+</div>
+</body>
 </html>
