Added new files and folders to match a website structure

--- a/Index.html
+++ b/Index.html
@@ -2,22 +2,28 @@
 <html>
 	<head>
 		<META http-equiv="content-type" content="text/html; charset=utf-8">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+			<script type="text/javascript" src="/CVWebsite/WebsiteJS.js"></script>
+			<link rel="stylesheet" href="/CVWebsite/WebsiteCSS.css" media="screen" title="no title" charset="utf-8">
 		<title> Nakima CV</title>
 	</head>
 
 	<body>
-		<!-- This is a nav bar allowing the user to navigate around the site. -->
+		<!-- This is a nav bar allowing the user to navigate around the main site. -->
 		<nav id="MainNavBar">
-		 <!-- -->
 		 <ul>
-		 		<li><a href="#"></a></li>
+		 		<li><a href="#">Home</a></li>
+				<li><a href="#">CV</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">Contact</a></li>
 		 </ul>
 		</nav>
 
-		<!-- This aside will hold the side bar ?? -->
+		<!-- This aside will hold the side bar consisting of my photot and my social links. -->
 		<aside class="" id="Sidebar">
-
+				
 		</aside>
+
 		<div>
 			<header>
 				<!-- can have many headers in many sections -->
