Adding Updated website with added css and javascript

--- a/CvPage.html
+++ b/CvPage.html
@@ -18,12 +18,12 @@
 		<div id="SiteContainer">
       <header id="PersonalDetails" role="PersonalDeatils">
 				<!-- can have many headers in many sections -->
-				<h1> Personal Details </h1>
-				<div id="PersonlDetails">
+				<section id="PersonlDetails">
+					<h1> Personal Details </h1>
 					<p> Nakima St. Lewis</P>
 					<p> Dalton Ave, Surrey | CR4 3DT</p>
 					<p> st.lewis.n@gmail.com | 07534430673</p>
-				</div>
+				</section>
 			</header>
 
 			<main role="=main" id="MainContent">
