--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
-<form method="POST" name="Contact" action="http://lacedeamon.spartaglobal.com/contactform">
-  <div id="ContactForm">
+<form method="POST" name="Contact" action="http://lacedeamon.spartaglobal.com/contactform" role="form">
+  <section id="ContactForm">
     <h1>Contact Form</h1>
     <p>
         Please type in your details to leave a comment and I will get back to you as soon as possible.
@@ -19,5 +19,5 @@
     <p>
       <input type="submit" value="Submit Message">
     </p>
-  </div>
+  </section>
 </form>
