latest edits to site

--- a/Index.html
+++ b/Index.html
@@ -40,39 +40,42 @@
 				</header>
 			</div>
 
-			<!-- This aside will hold the side bar consisting of my photot and my social links. -->
-			<aside class="sidebar" id="Sidebar">
-				<div id="MugshotSection" role="img">
-					<img src="Images/MyPhoto.jpg" alt="Photo cannot be displayed" title="N.S.L" id="N-S-L_Photo"/>
-				</div>
-				<div class="usernameDiv">
-						<label id="username" class="label label-default" for="N-S-L_Photo">N.S.L</label>
-				</div>
-				<div id="SocialLinksDiv" class="ShareButtons" role="SocialLinks">
-						<nav id="SocialNavigation" role="SocialNavigation">
-							<ul id="SocialLinkButton" class="nav nav-pills">
-								<li><a href="https://uk.linkedin.com/in/nakima-st-lewis-a86a0349" role="LinkedIn"><img src="./Images/linkedin.png" alt="LinkedIn" /></a></li>
-								<li><a href="https://github.com/N-S-L" role="GitHub"><img src="./Images/GitHub-Mark.png" alt="GitHub" /></a></li>
-							</ul>
-						</nav>
-				</div>
-			</aside>
+			<div class="ContentWrapper">
 
-			<main id="MainContent" role="main">
-				<div class="MainSummary">
-					<section role="Summary">
-						<div class="InsideSummary">
-							<h1> My Summary</h1>
-							<p>
-								I am an enthusiastic, reliable, and determined individual who has a passion for technology. I have completed a BSc in Computer science for which I gained a 2:1 and have since been training as a junior software tester at Sparta Global. My training covers a range of topics some of which are business skills, testing techniques, web development, and SQL.
-							</p>
+				<main class="maincontent clearfix" id="MainContent" role="main">
+					<!-- This aside will hold the side bar consisting of my photot and my social links. -->
+					<aside class="sidebar" id="Sidebar">
+						<div id="MugshotSection" role="img">
+							<img src="Images/MyPhoto.jpg" alt="Photo cannot be displayed" title="N.S.L" id="N-S-L_Photo"/>
 						</div>
-					</section>
-				</div>
-			</main>
+						<div class="usernameDiv">
+							<label id="username" class="label label-default" for="N-S-L_Photo">N.S.L</label>
+						</div>
+						<div id="SocialLinksDiv" class="ShareButtons" role="SocialLinks">
+							<nav id="SocialNavigation" role="SocialNavigation">
+								<ul id="SocialLinkButton" class="nav nav-pills">
+									<li><a href="https://uk.linkedin.com/in/nakima-st-lewis-a86a0349" role="LinkedIn"><img src="./Images/linkedin.png" alt="LinkedIn" /></a></li>
+									<li><a href="https://github.com/N-S-L" role="GitHub"><img src="./Images/GitHub-Mark.png" alt="GitHub" /></a></li>
+								</ul>
+							</nav>
+						</div>
+					</aside>
 
-			<footer>
-			</footer>
+					<div class="MainSummary">
+						<section role="Summary">
+							<div class="InsideSummary">
+								<h1> My Summary</h1>
+								<p>
+									I am an enthusiastic, reliable, and determined individual who has a passion for technology. I have completed a BSc in Computer science for which I gained a 2:1 and have since been training as a junior software tester at Sparta Global. My training covers a range of topics some of which are business skills, testing techniques, web development, and SQL.
+								</p>
+							</div>
+						</section>
+					</div>
+				</main>
+
+				<footer>
+				</footer>
+			</div>
 		</div>
 	</body>
 </html>
